attempt fix for background img on IE

--- a/ttdc_be_v6_everafter/css/style.css
+++ b/ttdc_be_v6_everafter/css/style.css
@@ -273,10 +273,17 @@ a img {
 	background-color:#fff;
 	background-position: 50% 0;
     background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-	height:100%;
+    height:100%;
 	width:100%;
 }
+
+#bg { position: fixed; top: 0; left: 0; }
+.bgwidth { width: 100%; }
+.bgheight { height: 100%; }
 
 .modern .slide {
 	
